tdf#150819 crash after a few paste and undo

regression from
    commit 3a02b5f8aae803b7b5a232c724135594483627a4
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Aug 16 18:44:31 2022 +0200
    convert more nNode to SwPosition::GetNode

Change-Id: I636590ec5eb28f0db3640464a49f0ab5582ff853
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145864
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit b70eee2d394dd7249c2de0cb41ccc47f80a05f8f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145947
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 4192d8cc3120473d0dbfcc7ff12bf8297ac999db)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146019
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>